satyam.suthar@elevancehealth.com utility code and constants refactor
