# src/main/resources/openApi.yaml
@@ -1,37 +1,36 @@
 openapi: 3.0.0
 servers:
-  # Added by API Auto Mocking Plugin
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/SATYAMSUTHAR/ngsLabsServices/1.0.0
-  - description: NGS Labs POC API Documentation
-    url: http://localhost:8085/ngslabservices/api
-  - description: API Specs for Proof Of Concepts developed by NGS Labs Team.
-    url: http://localhost:8085/ngslabservices/api
+- description: SwaggerHub API Auto Mocking
+  url: https://virtserver.swaggerhub.com/SATYAMSUTHAR/ngsLabsServices/1.0.0
+- description: NGS Labs POC API Documentation
+  url: http://localhost:8085/ngslabservices/api
+- description: API Specs for Proof Of Concepts developed by NGS Labs Team.
+  url: http://localhost:8085/ngslabservices/api
 info:
   description: This is the api specs for ngsLabsServices Platform.  The platform provides all the API endpoints for POCs that the NGS Labs team has completed.
-  version: "1.0.0"
-  title: Ngs Labs Services API 
+  version: 1.0.0
+  title: Ngs Labs Services API
   contact:
     email: DL-NGS-Labs@elevancehealth.com
   license:
     name: Apache 2.0
-    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 tags:
-  - name: NLP
-    description: Endpoints available for NLP Proof Of Concept Scopes
+- name: NLP
+  description: Endpoints available for NLP Proof Of Concept Scopes
 paths:
   /search:
     post:
       tags:
-       - NLP
-      summary: Search by open search criteria and update. 
+      - NLP
+      summary: Search by open search criteria and update.
       operationId: searchByCriteria
       description: Search by open search criteria and update. This is a document that provides all the informatin relevant for retrieving the main identifier for document
       responses:
         '201':
           description: search object created
         '400':
-          description: 'invalid input, object invalid'
+          description: invalid input, object invalid
       requestBody:
         content:
           application/json:
@@ -40,7 +39,7 @@ paths:
         description: Inventory item to add
     put:
       tags:
-        - NLP
+      - NLP
       summary: Update an existing search object
       description: Update an existing pet by Id
       operationId: searchUpdate
@@ -57,7 +56,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/search'          
+                $ref: '#/components/schemas/search'
             application/xml:
               schema:
                 $ref: '#/components/schemas/search'
@@ -68,19 +67,19 @@ paths:
         '405':
           description: Validation exception
   /search/{id}:
-   get:
+    get:
       tags:
-       - NLP
-      summary: Search by Unique Generated Identifier 
+      - NLP
+      summary: Search by Unique Generated Identifier
       operationId: searchById
       description: Search by open search criteria and update. This is a document that provides all the informatin relevant for retrieving the main identifier for document
-      parameters: 
-        - name: id
-          in: path
-          description: ID for searching
-          required: true
-          schema:
-            type: string
+      parameters:
+      - name: id
+        in: path
+        description: ID for searching
+        required: true
+        schema:
+          type: string
       responses:
         '200':
           description: successful operation
@@ -89,7 +88,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/search'          
+                  $ref: '#/components/schemas/search'
             application/xml:
               schema:
                 type: array
@@ -97,15 +96,13 @@ paths:
                   $ref: '#/components/schemas/search'
         '400':
           description: Invalid tag value
-     
   /extractText:
     post:
       tags:
-        - NLP
+      - NLP
       summary: Extract document content text using Azure's Vision API
       operationId: ocr
-      description:
-        By passing in the appropriate file and pages, you can store and retrieve the text for the reuested document
+      description: By passing in the appropriate file and pages, you can store and retrieve the text for the reuested document
       requestBody:
         content:
           multipart/form-data:
@@ -129,11 +126,10 @@ paths:
   /classifyHealthEntity:
     post:
       tags:
-        - NLP
+      - NLP
       summary: Takes raw text and classifies it into meaningful entities
       operationId: classifyHealth
-      description:
-       By Passing raw paragraph of text, and choosing {Health, PII, or BOTH} as options, you can classify text into meaningful entities.
+      description: By Passing raw paragraph of text, and choosing {Health, PII, or BOTH} as options, you can classify text into meaningful entities.
       requestBody:
         content:
           multipart/form-data:
@@ -153,15 +149,14 @@ paths:
                 items:
                   $ref: '#/components/schemas/search'
         '400':
-          description: bad input parameter    
+          description: bad input parameter
   /classifyPiiEntity:
     post:
       tags:
-        - NLP
+      - NLP
       summary: Takes raw text and classifies it into meaningful entities
       operationId: classifyPii
-      description:
-       By Passing raw paragraph of text, and choosing {Health, PII, or BOTH} as options, you can classify text into meaningful entities.
+      description: By Passing raw paragraph of text, and choosing {Health, PII, or BOTH} as options, you can classify text into meaningful entities.
       requestBody:
         content:
           multipart/form-data:
@@ -181,23 +176,23 @@ paths:
                 items:
                   $ref: '#/components/schemas/search'
         '400':
-          description: bad input parameter    
+          description: bad input parameter
   /piiEntity/{id}:
     get:
       tags:
-        - NLP
+      - NLP
       summary: searches collection for Health Entity by Id
       operationId: piiEntity
       description: |
         Retrieves health entity classification based on utilizing Azure Health Model and provides response of the entity.
-      parameters: 
-        - name: id
-          in: path
-          description: ID of pet to return
-          required: true
-          schema:
-            type: integer
-            format: int64
+      parameters:
+      - name: id
+        in: path
+        description: ID of pet to return
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         '200':
           description: search results matching criteria
@@ -212,19 +207,19 @@ paths:
   /healthEntity/{id}:
     get:
       tags:
-        - NLP
+      - NLP
       summary: searches collection for Health Entity by Id
       operationId: healthEntity
       description: |
         Retrieves health entity classification based on utilizing Azure Health Model and provides response of the entity.
-      parameters: 
-        - name: id
-          in: path
-          description: ID of pet to return
-          required: true
-          schema:
-            type: integer
-            format: int64
+      parameters:
+      - name: id
+        in: path
+        description: ID of pet to return
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         '200':
           description: search results matching criteria
@@ -241,12 +236,12 @@ components:
     search:
       type: object
       required:
-        - id
-        - person
-        - dateTime
-        - phoneNumber
-        - email
-        - organization
+      - id
+      - person
+      - dateTime
+      - phoneNumber
+      - email
+      - organization
       properties:
         id:
           type: string
@@ -263,28 +258,28 @@ components:
         phoneNumber:
           type: string
           format: string
-          example: '678-555-5555'
+          example: 678-555-5555
         email:
           type: string
           format: string
-          example: 'elizabeth.lozano@elevancehealth.com'
+          example: elizabeth.lozano@elevancehealth.com
         organization:
           type: string
           format: string
-          example: 'NGS'
+          example: NGS
         address:
           type: string
           format: string
-          example: 'elizabeth.lozano@elevancehealth.com'
+          example: elizabeth.lozano@elevancehealth.com
     extractedText:
       type: object
       required:
-        - id
-        - ClaimName
-        - createdDateTime
-        - lastUpdatedDateTime
-        - analyzeResult
-        - claimimage
+      - id
+      - ClaimName
+      - createdDateTime
+      - lastUpdatedDateTime
+      - analyzeResult
+      - claimimage
       properties:
         id:
           type: string
@@ -301,17 +296,17 @@ components:
         analyzeResult:
           type: object
           format: object
-          example: 'analyzeResult'
+          example: analyzeResult
         claimimage:
           type: string
           format: string
-          example: 'NGS'
+          example: NGS
     pii:
       type: object
       required:
-        - id
-        - correlatingId
-        - PIIEntities
+      - id
+      - correlatingId
+      - PIIEntities
       properties:
         id:
           type: string
@@ -320,7 +315,7 @@ components:
         correlatingId:
           type: string
           format: string
-          example: '6350455b5039236ffbffe0e2'
+          example: 6350455b5039236ffbffe0e2
         PIIEntities:
           type: array
           items:
@@ -328,9 +323,9 @@ components:
     health:
       type: object
       required:
-        - id
-        - correlatingId
-        - entities
+      - id
+      - correlatingId
+      - entities
       properties:
         id:
           type: string
@@ -339,7 +334,7 @@ components:
         correlatingId:
           type: string
           format: string
-          example: '6350455b5039236ffbffe0e2'
+          example: 6350455b5039236ffbffe0e2
         entities:
           type: array
           items:
